# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]
### Changed
- [PORTAL] [IDP] Define a new custom cookie name for IDP portal sessions
###  Fixed
- [PORTAL] [VIEWS] Correctly print error messages on self-service page
- [PORTAL] [SELF_SERVICE] Repair and improve self-service page
- [PORTAL] [AUTH_FILTERS] Authentication filters could not check conditions properly
- [AUTH] [LDAP] Encode binary fields in hexadecimal before handling them as claims


## [2.7.1] - 2023-06-07
###  Fixed
- [FRONTEND] resolve a bug that prevented users to modify a Listener existing before 2.7.0
- [API_PARSER] Remove useless default values for Cisco DUO fields


## [2.7.0] - 2023-05-24
### Added
- [API_PARSER] New API parser CISCO DUO
### Changed
- [DEPENDENCIES] Remove constraint on cryptography lib, upgrade cryptography to v40.0.2 and pyopenssl to v23.1.1
### Fixed
- [LOGGING] [PORTAL] Don't log exceptions when a user connects to a Portal for the first time!
- [PKI] [FORM] Use a safer SSL context for fields' validation
- [API_PARSER] [GSUITE_ALERTCENTER] prevent last_api_call stagnation
- [API_PARSER] [IMPERVA] Don't log exceptions on 404 errors
- [API] Correctly search objects by name for
  - LDAP repositories
  - OTP Repositories
  - Portals
  - ACLs


## [2.6.1] - 2023-05-22
### Fixed
- [FRONTEND] [MODELS] Wrong fields' type when trying to use API parsers due to inappropriate conversions


## [2.6.0] - 2023-05-05
### Removed
- [PYTHON] [IMPORTS] useless 'yaml' import in frontend's models.py
- [PYTHON] [REQUIREMENTS] replace python-oauth2's uuid generation with built-in uuid lib
- [PYTHON] [REQUIREMENTS] Completely remove sqlalchemy from requirements and code
### Added